2008-07-27 Og Maciel <ogmaciel@gnome.org>

    * adddialog.py, prefdialog.py, maindialog.py: Mnemonic labels/widgets and HIG work.
      Thanks Wilson Pinto Junior <wilsonpjunior@gmail.com>

2008-07-18 Og Maciel <ogmaciel@gnome.org>

    * aboutdialog.py: Make sure you can visit the project web site when clicking on link.

2008-07-15 Og Maciel <ogmaciel@gnome.org>

    * maindialog.py: Fixed regression from r.557 that caused records to be reset upon editing

2008-07-14 Og Maciel <ogmaciel@gnome.org>

    * maindialog.py: No need to cast value passed from View submenus to strings

2008-07-11 Og Maciel <ogmaciel@gnome.org>

    * maindialog.py: Remove duplicated menu entry and fix event handling

2008-07-10 Og Maciel <ogmaciel@gnome.org>

    * adddialog.py: Make use of gconf values
    * prefdialog.py: Make use of gconf values
    * maindialog.py: Make use of gconf values

2008-05-10 Og Maciel <ogmaciel@gnome.org>

	* adddialog.py: Display the localized currency symbol.
	* maindialog.py: Only reload the records tree if something has really changed in db.

2008-04-14 Og Maciel <ogmaciel@gnome.org>

    * categoriesdialog.py: Ask user for confirmation before editing an existing category.
    Patch sent by Laudeci Oliveira.

2008-04-13 Og Maciel <ogmaciel@gnome.org>

	* adddialog.py
	* maindialog.py
	* categoriesdialog.py: It is no longer needed to parse color field prior
	to calling lib/utils.create_pixbuf method.

2008-04-04 Og Maciel <ogmaciel@gnome.org>

    * categoriesdialog.py: Simplify the code; automatically select a newly 
	created category. (ref: http://code.google.com/p/billreminder/issues/detail?id=2)
    * adddialog.py: Expect a category dictionary from categoriesdialog.py.

2008-04-03 Og Maciel <ogmaciel@gnome.org>

    * categoriesdialog.py: Don't allow an existing category to be added.
    * adddialog.py: Only set the alarm if it is specified in the user's preferences.
	(ref: http://code.google.com/p/billreminder/issues/detail?id=1)
